--- a/main.css
+++ b/main.css
@@ -17,7 +17,7 @@
     align-items: center;
     justify-content: center;
     flex-wrap: wrap;
-    max-width: 400px;
+    max-width: 1000px;
   }
   
   .square {
@@ -27,6 +27,7 @@
     width: 16px;
     margin: 2px;
     transition: 2s ease;
+    border-radius: 50%;
   }
   
   .square:hover {
